--- a/hipchat.cabal
+++ b/hipchat.cabal
@@ -24,7 +24,11 @@ description:
 library
   hs-source-dirs:      src
   exposed-modules:     HipChat
+                     , HipChat.API.Auth
   build-depends:       base >= 4.7 && < 5
+                     , servant
+                     , servant-client
+                     , text
   default-language:    Haskell2010
   ghc-options:        -Wall 
 
