--- a/hipchat.cabal
+++ b/hipchat.cabal
@@ -24,17 +24,21 @@ description:
 library
   hs-source-dirs:      src
   exposed-modules:     HipChat
+                     , HipChat.Auth
                      , HipChat.Types
-                     , HipChat.API.Auth
                      , HipChat.API.Rooms
   other-modules:       Control.Lens.AsText
+                     , HipChat.Auth.Token
+                     , HipChat.Auth.Types
   build-depends:       base >= 4.7 && < 5
+                     , aeson
+                     , http-api-data
                      , lens
                      , servant
                      , servant-client
                      , text
   default-language:    Haskell2010
-  ghc-options:        -Wall 
+  ghc-options:        -Wall
 
 source-repository head
   type:     git
