--- a/hipchat.cabal
+++ b/hipchat.cabal
@@ -34,6 +34,7 @@ library
                      , HipChat.AddOn.Icon
                      , HipChat.AddOn.Key
                      , HipChat.AddOn.Name
+                     , HipChat.AddOn.Types.AuthenticationMethod
                      , HipChat.Types.URL
   build-depends:       base >= 4.7 && < 5
                      , aeson
