--- a/hipchat.cabal
+++ b/hipchat.cabal
@@ -34,9 +34,9 @@ library
                      , HipChat.Auth.Token
                      , HipChat.Auth.Types
                      , HipChat.AddOn.Icon
-                     , HipChat.AddOn.Key
                      , HipChat.AddOn.Name
                      , HipChat.AddOn.Types.AuthenticationMethod
+                     , HipChat.Types.Key
                      , HipChat.Types.URL
   build-depends:       base >= 4.7 && < 5
                      , aeson
