move icon and name to AddOn.Types

--- a/hipchat.cabal
+++ b/hipchat.cabal
@@ -37,6 +37,8 @@ library
                      , HipChat.Util
                      , HipChat.Auth.Token
                      , HipChat.AddOn.Types.AuthenticationMethod
+                     , HipChat.AddOn.Types.Icon
+                     , HipChat.AddOn.Types.Name
                      , HipChat.AddOn.Types.RoomEvent
                      , HipChat.AddOn.Dialog
                      , HipChat.AddOn.Glance
